# CP467_Sports_Highlight_Detection_Presentation_Demo

./: AutomatedSportsHighlightGenerationDemo.py  README.md  pyproject.toml
